invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_75.src
.IPPcode24
STRI2INT int@49 int@49 int@49